Completed main operation in the financial statements

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cost Estimation For IRIDE Costellation\n",
+    "# Cost Estimation For IRIDE Constellation\n",
     "\n",
     "## Imports"
    ]
@@ -177,21 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BalanceSheet():\n",
     "    def __init__(self):\n",
-    "        self.total_current_assets = 0\n",
-    "        self.total_non_current_assets = 0\n",
-    "        self.total_equity = 0\n",
-    "        self.total_liability = 0\n",
+    "        self.current_assets = 0\n",
+    "        self.non_current_assets = 0\n",
+    "        self.equity = 0\n",
+    "        self.liability = 0\n",
     "        return\n",
-    "    def get_total_assets(self):\n",
-    "        return self.total_current_assets + self.total_non_current_assets\n",
-    "    def get_total_equity_n_liability(self):\n",
-    "        return self.total_equity + self.total_liability\n",
+    "    def get_assets(self):\n",
+    "        return self.current_assets + self.non_current_assets\n",
+    "    def get_equity_n_liability(self):\n",
+    "        return self.equity + self.liability\n",
     "\n",
     "class IncomeStatement():\n",
     "    def __init__(self):\n",
@@ -222,29 +222,62 @@
     "    def get_net_change_in_cash(self):\n",
     "        return self.operating_cf + self.investing_cf + self.financing_cf\n",
     "\n",
-    "class FinancialStatements():\n",
-    "    def __init__(self, first_year=2023, duration=10):\n",
+    "class FinancialYear():\n",
+    "    def __init__(self, year):\n",
+    "        self.year = year\n",
+    "        self.bsh = BalanceSheet()\n",
+    "        self.ist = IncomeStatement()\n",
+    "        self.cfs = CashFlowStatement()\n",
+    "\n",
+    "class FinancialPeriod():\n",
+    "    def __init__(self, first_year:int=2023, duration:int=10):\n",
     "        self.first_year = first_year\n",
     "        self.duration = duration\n",
-    "        self.statements = [{\n",
-    "                \"year\": year,\n",
-    "                \"bsh\": BalanceSheet(),\n",
-    "                \"ist\": IncomeStatement(),\n",
-    "                \"cfs\": CashFlowStatement()\n",
-    "            } for year in range(first_year, first_year + duration)\n",
-    "        ]\n",
-    "    def finance(self, year, amount, debt=False):\n",
+    "        self.years = [FinancialYear(year) for year in range(first_year, first_year + duration)]\n",
+    "    def _get_year(self, year:int):\n",
     "        yy = year - self.first_year\n",
     "        if yy < 0 or yy > self.duration:\n",
     "            raise ValueError(\"Finance transaction out of bound.\")\n",
-    "        self.statements[yy].bsh.total_current_assets += amount\n",
-    "        self.statements[yy].cfs.financing_cf += amount\n",
+    "        return yy\n",
+    "    def finance(self, year:int, amount:float, debt:bool=False):\n",
+    "        yy = self._get_year(year);\n",
+    "        self.years[yy].bsh.current_assets += amount\n",
+    "        self.years[yy].cfs.financing_cf += amount\n",
     "        if debt:\n",
-    "            self.statements[yy].bsh.total_liability += amount\n",
+    "            self.years[yy].bsh.liability += amount\n",
     "        else:\n",
-    "            self.statements[yy].bsh.total_equity += amount\n",
-    "    def build_asset(self, year, amount, amortization_duration=5):\n",
-    "        pass\n"
+    "            self.years[yy].bsh.equity += amount\n",
+    "    def build_asset(self, year:int, amount:float, amortization_duration:int=5):\n",
+    "        yy = self._get_year(year);\n",
+    "        self.years[yy].bsh.current_assets -= amount\n",
+    "        self.years[yy].bsh.non_current_assets += amount\n",
+    "        for ii in range(1, amortization_duration):\n",
+    "            if yy + ii <= self.duration:\n",
+    "                self.years[yy + ii].ist.depreciation_n_amortizations += amount / amortization_duration\n",
+    "                self.years[yy + ii].bsh.non_current_assets -= amount / amortization_duration\n",
+    "                self.years[yy + ii].bsh.equity -= amount / amortization_duration\n",
+    "    def pay_operating_expenses(self, year, amount, recurring_step=0):\n",
+    "        yy = self._get_year(year);\n",
+    "        # if no recursion\n",
+    "        if recurring_step <= 0:\n",
+    "            self.years[yy].cfs.operating_cf -= amount\n",
+    "            self.years[yy].bsh.current_assets -= amount\n",
+    "            self.years[yy].bsh.equity -= amount\n",
+    "            self.years[yy].ist.operating_expenses += amount\n",
+    "            return\n",
+    "        # if recursion\n",
+    "        for ii in range(yy, self.duration, recurring_step):\n",
+    "            self.years[ii].cfs.operating_cf -= amount\n",
+    "            self.years[ii].bsh.current_assets -= amount\n",
+    "            self.years[ii].bsh.equity -= amount\n",
+    "            self.years[ii].ist.operating_expenses += amount\n",
+    "            \n",
+    "\n",
+    "fp = FinancialPeriod(first_year=2023, duration=10)\n",
+    "fp.finance(year=2023, amount=1100)\n",
+    "fp.build_asset(year=2024, amount=1, amortization_duration=5)\n",
+    "fp.pay_operating_expenses(year=2024, amount=1, recurring_step=0)\n",
+    "fp.pay_operating_expenses(year=2024, amount=1, recurring_step=1)"
    ]
   }
  ],
