Compacted the code

--- a/main.ipynb
+++ b/main.ipynb
@@ -177,9 +177,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assets: [np.float64(1100.0), np.float64(1009.4), np.float64(875.5999999999999), np.float64(896.7449695240684), np.float64(937.6271412083722), np.float64(824.8236218608242), np.float64(1256.9598743808078), np.float64(1496.7215473274468), np.float64(1521.9997752823194), np.float64(1548.8915309654346), np.float64(1577.5000000000002)]\n",
+      "Net Income: [np.float64(-90.6), np.float64(-133.8), np.float64(-133.8), np.float64(21.144969524068415), np.float64(195.82714120837215), np.float64(216.82362186082418), np.float64(329.75987438080784), np.float64(396.72154732744673), np.float64(421.9997752823195), np.float64(448.8915309654347), np.float64(477.5000000000002)]\n",
+      "Delta cash: [np.float64(1100.0), np.float64(0.0), np.float64(0.0), np.float64(154.94496952406843), np.float64(329.62714120837217), np.float64(350.6236218608242), np.float64(372.95987438080783), np.float64(396.72154732744673), np.float64(421.9997752823195), np.float64(448.8915309654347), np.float64(477.5000000000002)]\n"
+     ]
+    }
+   ],
    "source": [
     "class BalanceSheet():\n",
     "    def __init__(self):\n",
@@ -233,7 +243,9 @@
     "    def __init__(self, first_year:int=2023, duration:int=10):\n",
     "        self.first_year = first_year\n",
     "        self.duration = duration\n",
-    "        self.years = [FinancialYear(year) for year in range(first_year, first_year + duration)]\n",
+    "        self.balance_sheets = [BalanceSheet() for year in range(0, duration)]\n",
+    "        self.income_statements = [IncomeStatement() for year in range(0, duration)]\n",
+    "        self.cash_flow_statements = [CashFlowStatement() for year in range(0, duration)]\n",
     "    def _get_year(self, year:int):\n",
     "        yy = year - self.first_year\n",
     "        if yy < 0 or yy > self.duration:\n",
@@ -241,43 +253,76 @@
     "        return yy\n",
     "    def finance(self, year:int, amount:float, debt:bool=False):\n",
     "        yy = self._get_year(year);\n",
-    "        self.years[yy].bsh.current_assets += amount\n",
-    "        self.years[yy].cfs.financing_cf += amount\n",
-    "        if debt:\n",
-    "            self.years[yy].bsh.liability += amount\n",
-    "        else:\n",
-    "            self.years[yy].bsh.equity += amount\n",
-    "    def build_asset(self, year:int, amount:float, amortization_duration:int=5):\n",
+    "        self.cash_flow_statements[yy].financing_cf += amount\n",
+    "        for ii in range(yy, self.duration):\n",
+    "            self.balance_sheets[ii].current_assets += amount\n",
+    "            if debt:\n",
+    "                self.balance_sheets[ii].liability += amount\n",
+    "            else:\n",
+    "                self.balance_sheets[ii].equity += amount\n",
+    "    def build_asset(self, year:int, amount:float, amortization_duration:int, recurring_step:int):\n",
     "        yy = self._get_year(year);\n",
-    "        self.years[yy].bsh.current_assets -= amount\n",
-    "        self.years[yy].bsh.non_current_assets += amount\n",
-    "        for ii in range(1, amortization_duration):\n",
-    "            if yy + ii <= self.duration:\n",
-    "                self.years[yy + ii].ist.depreciation_n_amortizations += amount / amortization_duration\n",
-    "                self.years[yy + ii].bsh.non_current_assets -= amount / amortization_duration\n",
-    "                self.years[yy + ii].bsh.equity -= amount / amortization_duration\n",
-    "    def pay_operating_expenses(self, year, amount, recurring_step=0):\n",
+    "        ii = 0\n",
+    "        delta = amount / amortization_duration\n",
+    "        while yy + ii < min(yy + amortization_duration + 1, self.duration):\n",
+    "            self.balance_sheets[yy + ii].current_assets -= amount\n",
+    "            self.balance_sheets[yy + ii].equity -= delta * ii\n",
+    "            self.balance_sheets[yy + ii].non_current_assets += delta * (amortization_duration - ii)\n",
+    "            self.income_statements[yy + ii].depreciation_n_amortizations += delta\n",
+    "            ii += 1\n",
+    "    def pay_operating_expenses(self, year:int, amount:float, recurring_step:int):\n",
     "        yy = self._get_year(year);\n",
-    "        # if no recursion\n",
-    "        if recurring_step <= 0:\n",
-    "            self.years[yy].cfs.operating_cf -= amount\n",
-    "            self.years[yy].bsh.current_assets -= amount\n",
-    "            self.years[yy].bsh.equity -= amount\n",
-    "            self.years[yy].ist.operating_expenses += amount\n",
-    "            return\n",
-    "        # if recursion\n",
-    "        for ii in range(yy, self.duration, recurring_step):\n",
-    "            self.years[ii].cfs.operating_cf -= amount\n",
-    "            self.years[ii].bsh.current_assets -= amount\n",
-    "            self.years[ii].bsh.equity -= amount\n",
-    "            self.years[ii].ist.operating_expenses += amount\n",
-    "            \n",
+    "        while yy < self.duration:\n",
+    "            self.cash_flow_statements[yy].operating_cf -= amount\n",
+    "            self.balance_sheets[yy].current_assets -= amount\n",
+    "            self.balance_sheets[yy].equity -= amount\n",
+    "            self.income_statements[yy].operating_expenses += amount\n",
+    "            yy += (recurring_step if recurring_step > 0 else self.duration)\n",
+    "    def get_revenues(self, year:int, amount:float, recurring_step:int):\n",
+    "        yy = self._get_year(year);\n",
+    "        while yy < self.duration:\n",
+    "            self.cash_flow_statements[yy].operating_cf += amount\n",
+    "            self.balance_sheets[yy].current_assets += amount\n",
+    "            self.balance_sheets[yy].equity += amount\n",
+    "            self.income_statements[yy].revenues += amount\n",
+    "            yy += (recurring_step if recurring_step > 0 else self.duration)\n",
+    "    def print_assets(self):\n",
+    "        assets = []\n",
+    "        for yy in self.balance_sheets:\n",
+    "            assets.append(yy.get_assets())\n",
+    "        print(\"Assets:\", assets)\n",
+    "    def print_net_income(self):\n",
+    "        net_income = []\n",
+    "        for yy in self.income_statements:\n",
+    "            net_income.append(yy.get_net_income())\n",
+    "        print(\"Net Income:\", net_income)\n",
+    "    def print_net_change_in_cash(self):\n",
+    "        delta_cash = []\n",
+    "        for yy in self.cash_flow_statements:\n",
+    "            delta_cash.append(yy.get_net_change_in_cash())\n",
+    "        print(\"Delta cash:\", delta_cash)\n",
+    "    def print_results(self):\n",
+    "        self.print_assets()\n",
+    "        self.print_net_income()\n",
+    "        self.print_net_change_in_cash()\n",
     "\n",
-    "fp = FinancialPeriod(first_year=2023, duration=10)\n",
+    "fp = FinancialPeriod(first_year=2023, duration=11)\n",
     "fp.finance(year=2023, amount=1100)\n",
-    "fp.build_asset(year=2024, amount=1, amortization_duration=5)\n",
-    "fp.pay_operating_expenses(year=2024, amount=1, recurring_step=0)\n",
-    "fp.pay_operating_expenses(year=2024, amount=1, recurring_step=1)"
+    "\n",
+    "fp.build_asset(year=2023, amount=53.67, amortization_duration=5, recurring_step=0) # R&D satellites\n",
+    "fp.build_asset(year=2023, amount=127, amortization_duration=5, recurring_step=0) # build infrastructure\n",
+    "\n",
+    "fp.build_asset(year=2023, amount=272.33, amortization_duration=5, recurring_step=6) # build infrastructure\n",
+    "fp.build_asset(year=2024, amount=216.00, amortization_duration=5, recurring_step=6) # build infrastructure\n",
+    "\n",
+    "# fp.pay_operating_expenses(year=2024, amount=212.87, recurring_step=5) # launch satellites\n",
+    "# fp.pay_operating_expenses(year=2025, amount=219.13, recurring_step=5) # launch satellites\n",
+    "# fp.pay_operating_expenses(year=2025, amount=160.15, recurring_step=1) # structure maintenances\n",
+    "\n",
+    "for ii in range(0, simulation_length):\n",
+    "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0) # revenues\n",
+    "\n",
+    "fp.print_results()"
    ]
   }
  ],
