Clean the code using dataframes

--- a/main.ipynb
+++ b/main.ipynb
@@ -177,152 +177,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assets: [np.float64(1100.0), np.float64(1009.4), np.float64(875.5999999999999), np.float64(896.7449695240684), np.float64(937.6271412083722), np.float64(824.8236218608242), np.float64(1256.9598743808078), np.float64(1496.7215473274468), np.float64(1521.9997752823194), np.float64(1548.8915309654346), np.float64(1577.5000000000002)]\n",
-      "Net Income: [np.float64(-90.6), np.float64(-133.8), np.float64(-133.8), np.float64(21.144969524068415), np.float64(195.82714120837215), np.float64(216.82362186082418), np.float64(329.75987438080784), np.float64(396.72154732744673), np.float64(421.9997752823195), np.float64(448.8915309654347), np.float64(477.5000000000002)]\n",
-      "Delta cash: [np.float64(1100.0), np.float64(0.0), np.float64(0.0), np.float64(154.94496952406843), np.float64(329.62714120837217), np.float64(350.6236218608242), np.float64(372.95987438080783), np.float64(396.72154732744673), np.float64(421.9997752823195), np.float64(448.8915309654347), np.float64(477.5000000000002)]\n"
+      "Balance Sheet:\n",
+      "                      2023    2024   2025   2026   2027   2028   2029    2030    2031    2032    2033\n",
+      "Current Assets       647.0   431.0  431.0  431.0  431.0  431.0  884.0  1100.0  1100.0  1100.0  1100.0\n",
+      "Non-current Assets   453.0   578.4  444.6  310.8  177.0   43.2    0.0     0.0     0.0     0.0     0.0\n",
+      "Equity              1100.0  1009.4  875.6  741.8  608.0  474.2  884.0  1100.0  1100.0  1100.0  1100.0\n",
+      "Liability              0.0     0.0    0.0    0.0    0.0    0.0    0.0     0.0     0.0     0.0     0.0\n",
+      "\n",
+      "Income Statement:\n",
+      "                              2023  2024   2025   2026   2027   2028  2029  2030  2031  2032  2033\n",
+      "Revenues                       0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
+      "Cost of Revenues               0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
+      "Operating Expenses             0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
+      "Depreciation & Amortizations   0.0  90.6  133.8  133.8  133.8  133.8  43.2   0.0   0.0   0.0   0.0\n",
+      "Interest Expenses              0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
+      "Tax Ratio                      0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
+      "\n",
+      "Cash Flow Statement:\n",
+      "                2023  2024  2025  2026  2027  2028  2029  2030  2031  2032  2033\n",
+      "Operating CF     0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0\n",
+      "Investing CF     0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0\n",
+      "Financing CF  1100.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0\n"
      ]
     }
    ],
    "source": [
-    "class BalanceSheet():\n",
-    "    def __init__(self):\n",
-    "        self.current_assets = 0\n",
-    "        self.non_current_assets = 0\n",
-    "        self.equity = 0\n",
-    "        self.liability = 0\n",
-    "        return\n",
-    "    def get_assets(self):\n",
-    "        return self.current_assets + self.non_current_assets\n",
-    "    def get_equity_n_liability(self):\n",
-    "        return self.equity + self.liability\n",
-    "\n",
-    "class IncomeStatement():\n",
-    "    def __init__(self):\n",
-    "        self.revenues = 0\n",
-    "        self.cost_of_revenues = 0\n",
-    "        self.operating_expenses = 0\n",
-    "        self.depreciation_n_amortizations = 0\n",
-    "        self.interest_expenses = 0\n",
-    "        self.tax_ratio = 0\n",
-    "        return\n",
-    "    def get_gross_profit(self):\n",
-    "        return self.revenues - self.cost_of_revenues\n",
-    "    def get_EBITDA(self):\n",
-    "        return self.get_gross_profit() - self.operating_expenses\n",
-    "    def get_EBIT(self):\n",
-    "        return self.get_EBITDA() - self.depreciation_n_amortizations\n",
-    "    def get_income_tax_expenses(self):\n",
-    "        return (self.get_EBIT() - self.interest_expenses) * self.tax_ratio\n",
-    "    def get_net_income(self):\n",
-    "        return (self.get_EBIT() - self.interest_expenses) * (1 - self.tax_ratio)\n",
-    "\n",
-    "class CashFlowStatement():\n",
-    "    def __init__(self):\n",
-    "        self.operating_cf = 0\n",
-    "        self.investing_cf = 0\n",
-    "        self.financing_cf = 0\n",
-    "        return\n",
-    "    def get_net_change_in_cash(self):\n",
-    "        return self.operating_cf + self.investing_cf + self.financing_cf\n",
-    "\n",
-    "class FinancialYear():\n",
-    "    def __init__(self, year):\n",
-    "        self.year = year\n",
-    "        self.bsh = BalanceSheet()\n",
-    "        self.ist = IncomeStatement()\n",
-    "        self.cfs = CashFlowStatement()\n",
-    "\n",
     "class FinancialPeriod():\n",
-    "    def __init__(self, first_year:int=2023, duration:int=10):\n",
+    "    def __init__(self, first_year=2023, duration=11):\n",
     "        self.first_year = first_year\n",
     "        self.duration = duration\n",
-    "        self.balance_sheets = [BalanceSheet() for year in range(0, duration)]\n",
-    "        self.income_statements = [IncomeStatement() for year in range(0, duration)]\n",
-    "        self.cash_flow_statements = [CashFlowStatement() for year in range(0, duration)]\n",
-    "    def _get_year(self, year:int):\n",
-    "        yy = year - self.first_year\n",
-    "        if yy < 0 or yy > self.duration:\n",
-    "            raise ValueError(\"Finance transaction out of bound.\")\n",
-    "        return yy\n",
-    "    def finance(self, year:int, amount:float, debt:bool=False):\n",
-    "        yy = self._get_year(year);\n",
-    "        self.cash_flow_statements[yy].financing_cf += amount\n",
-    "        for ii in range(yy, self.duration):\n",
-    "            self.balance_sheets[ii].current_assets += amount\n",
+    "        self.years = [first_year + i for i in range(duration)]\n",
+    "        self.balance_sheet = pd.DataFrame(0, index=self.years, columns=[\n",
+    "            'Current Assets',\n",
+    "            'Non-current Assets',\n",
+    "            'Equity',\n",
+    "            'Liability'\n",
+    "        ]).astype('float64')\n",
+    "        self.income_statement = pd.DataFrame(0, index=self.years, columns=[\n",
+    "            'Revenues',\n",
+    "            'Cost of Revenues',\n",
+    "            'Operating Expenses',\n",
+    "            'Depreciation & Amortizations',\n",
+    "            'Interest Expenses',\n",
+    "            'Tax Ratio'\n",
+    "        ]).astype('float64')\n",
+    "        self.cash_flow_statement = pd.DataFrame(0, index=self.years, columns=[\n",
+    "            'Operating CF',\n",
+    "            'Investing CF',\n",
+    "            'Financing CF'\n",
+    "        ]).astype('float64')\n",
+    "        \n",
+    "    def _get_year_index(self, year):\n",
+    "        if year < self.first_year or year >= self.first_year + self.duration:\n",
+    "            raise ValueError(\"Year out of bounds.\")\n",
+    "        return year\n",
+    "    \n",
+    "    def finance(self, year, amount, debt=False):\n",
+    "        yy = self._get_year_index(year)\n",
+    "        self.cash_flow_statement.at[yy, 'Financing CF'] += amount\n",
+    "        for ii in range(yy, self.first_year + self.duration):\n",
+    "            self.balance_sheet.at[ii, 'Current Assets'] += amount\n",
     "            if debt:\n",
-    "                self.balance_sheets[ii].liability += amount\n",
+    "                self.balance_sheet.at[ii, 'Liability'] += amount\n",
     "            else:\n",
-    "                self.balance_sheets[ii].equity += amount\n",
-    "    def build_asset(self, year:int, amount:float, amortization_duration:int, recurring_step:int):\n",
-    "        yy = self._get_year(year);\n",
-    "        ii = 0\n",
+    "                self.balance_sheet.at[ii, 'Equity'] += amount\n",
+    "    \n",
+    "    def build_asset(self, year, amount, amortization_duration, recurring_step):\n",
+    "        yy = self._get_year_index(year)\n",
     "        delta = amount / amortization_duration\n",
-    "        while yy + ii < min(yy + amortization_duration + 1, self.duration):\n",
-    "            self.balance_sheets[yy + ii].current_assets -= amount\n",
-    "            self.balance_sheets[yy + ii].equity -= delta * ii\n",
-    "            self.balance_sheets[yy + ii].non_current_assets += delta * (amortization_duration - ii)\n",
-    "            self.income_statements[yy + ii].depreciation_n_amortizations += delta\n",
-    "            ii += 1\n",
-    "    def pay_operating_expenses(self, year:int, amount:float, recurring_step:int):\n",
-    "        yy = self._get_year(year);\n",
-    "        while yy < self.duration:\n",
-    "            self.cash_flow_statements[yy].operating_cf -= amount\n",
-    "            self.balance_sheets[yy].current_assets -= amount\n",
-    "            self.balance_sheets[yy].equity -= amount\n",
-    "            self.income_statements[yy].operating_expenses += amount\n",
-    "            yy += (recurring_step if recurring_step > 0 else self.duration)\n",
-    "    def get_revenues(self, year:int, amount:float, recurring_step:int):\n",
-    "        yy = self._get_year(year);\n",
-    "        while yy < self.duration:\n",
-    "            self.cash_flow_statements[yy].operating_cf += amount\n",
-    "            self.balance_sheets[yy].current_assets += amount\n",
-    "            self.balance_sheets[yy].equity += amount\n",
-    "            self.income_statements[yy].revenues += amount\n",
-    "            yy += (recurring_step if recurring_step > 0 else self.duration)\n",
-    "    def print_assets(self):\n",
-    "        assets = []\n",
-    "        for yy in self.balance_sheets:\n",
-    "            assets.append(yy.get_assets())\n",
-    "        print(\"Assets:\", assets)\n",
-    "    def print_net_income(self):\n",
-    "        net_income = []\n",
-    "        for yy in self.income_statements:\n",
-    "            net_income.append(yy.get_net_income())\n",
-    "        print(\"Net Income:\", net_income)\n",
-    "    def print_net_change_in_cash(self):\n",
-    "        delta_cash = []\n",
-    "        for yy in self.cash_flow_statements:\n",
-    "            delta_cash.append(yy.get_net_change_in_cash())\n",
-    "        print(\"Delta cash:\", delta_cash)\n",
+    "        for ii in range(amortization_duration + 1):\n",
+    "            if yy + ii >= self.first_year + self.duration:\n",
+    "                break\n",
+    "            self.balance_sheet.at[yy + ii, 'Current Assets'] -= amount\n",
+    "            self.balance_sheet.at[yy + ii, 'Equity'] -= delta * ii\n",
+    "            self.balance_sheet.at[yy + ii, 'Non-current Assets'] += delta * (amortization_duration - ii)\n",
+    "            self.income_statement.at[yy + ii, 'Depreciation & Amortizations'] += delta * (ii != 0)\n",
+    "    \n",
+    "    def pay_operating_expenses(self, year, amount, recurring_step):\n",
+    "        yy = self._get_year_index(year)\n",
+    "        while yy < self.first_year + self.duration:\n",
+    "            self.balance_sheet.at[yy, 'Current Assets'] -= amount * (year - yy + 1)\n",
+    "            self.balance_sheet.at[yy, 'Equity'] -= amount * (year - yy + 1)\n",
+    "            self.cash_flow_statement.at[yy, 'Operating CF'] -= amount\n",
+    "            self.income_statement.at[yy, 'Operating Expenses'] += amount\n",
+    "            yy += recurring_step if recurring_step > 0 else self.duration\n",
+    "    \n",
+    "    def get_revenues(self, year, amount, recurring_step):\n",
+    "        yy = self._get_year_index(year)\n",
+    "        while yy < self.first_year + self.duration:\n",
+    "            self.cash_flow_statement.at[yy, 'Operating CF'] += amount * (year - yy + 1)\n",
+    "            self.balance_sheet.at[yy, 'Current Assets'] += amount * (year - yy + 1)\n",
+    "            self.balance_sheet.at[yy, 'Equity'] += amount\n",
+    "            self.income_statement.at[yy, 'Revenues'] += amount\n",
+    "            yy += recurring_step if recurring_step > 0 else self.duration\n",
+    "    \n",
     "    def print_results(self):\n",
-    "        self.print_assets()\n",
-    "        self.print_net_income()\n",
-    "        self.print_net_change_in_cash()\n",
+    "        print(\"Balance Sheet:\")\n",
+    "        print(self.balance_sheet.T)\n",
+    "        print(\"\\nIncome Statement:\")\n",
+    "        print(self.income_statement.T)\n",
+    "        print(\"\\nCash Flow Statement:\")\n",
+    "        print(self.cash_flow_statement.T)\n",
     "\n",
+    "# Example usage:\n",
     "fp = FinancialPeriod(first_year=2023, duration=11)\n",
     "fp.finance(year=2023, amount=1100)\n",
+    "fp.build_asset(year=2023, amount=53.67, amortization_duration=5, recurring_step=0)\n",
+    "fp.build_asset(year=2023, amount=127, amortization_duration=5, recurring_step=0)\n",
+    "fp.build_asset(year=2023, amount=272.33, amortization_duration=5, recurring_step=6)\n",
+    "fp.build_asset(year=2024, amount=216.00, amortization_duration=5, recurring_step=6)\n",
     "\n",
-    "fp.build_asset(year=2023, amount=53.67, amortization_duration=5, recurring_step=0) # R&D satellites\n",
-    "fp.build_asset(year=2023, amount=127, amortization_duration=5, recurring_step=0) # build infrastructure\n",
+    "# Uncomment to simulate expenses and revenues\n",
+    "# fp.pay_operating_expenses(year=2024, amount=212.87, recurring_step=5)\n",
+    "# fp.pay_operating_expenses(year=2025, amount=219.13, recurring_step=5)\n",
+    "# fp.pay_operating_expenses(year=2025, amount=160.15, recurring_step=1)\n",
+    "# fp.get_revenues(year=2024, amount=500, recurring_step=1)\n",
     "\n",
-    "fp.build_asset(year=2023, amount=272.33, amortization_duration=5, recurring_step=6) # build infrastructure\n",
-    "fp.build_asset(year=2024, amount=216.00, amortization_duration=5, recurring_step=6) # build infrastructure\n",
-    "\n",
-    "# fp.pay_operating_expenses(year=2024, amount=212.87, recurring_step=5) # launch satellites\n",
-    "# fp.pay_operating_expenses(year=2025, amount=219.13, recurring_step=5) # launch satellites\n",
-    "# fp.pay_operating_expenses(year=2025, amount=160.15, recurring_step=1) # structure maintenances\n",
-    "\n",
-    "for ii in range(0, simulation_length):\n",
-    "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0) # revenues\n",
-    "\n",
-    "fp.print_results()"
+    "fp.print_results()\n"
    ]
   }
  ],
