--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
+    "from tabulate import tabulate\n",
     "# plt.style.use('_mpl-gallery')"
    ]
   },
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -185,26 +186,26 @@
      "output_type": "stream",
      "text": [
       "Balance Sheet:\n",
-      "                      2023    2024   2025   2026   2027   2028   2029    2030    2031    2032    2033\n",
-      "Current Assets       647.0   431.0  431.0  431.0  431.0  431.0  884.0  1100.0  1100.0  1100.0  1100.0\n",
-      "Non-current Assets   453.0   578.4  444.6  310.8  177.0   43.2    0.0     0.0     0.0     0.0     0.0\n",
-      "Equity              1100.0  1009.4  875.6  741.8  608.0  474.2  884.0  1100.0  1100.0  1100.0  1100.0\n",
-      "Liability              0.0     0.0    0.0    0.0    0.0    0.0    0.0     0.0     0.0     0.0     0.0\n",
+      "                      2023    2024    2025       2026         2027         2028         2029         2030         2031         2032      2033\n",
+      "Current Assets       647.0  218.13   51.72  585.94497   920.777141  1101.923622  1465.079874  2713.341547  2930.069775  2021.461531  2210.220\n",
+      "Non-current Assets   453.0  578.40  444.60  310.80000   177.000000    43.200000   272.330000   433.864000   336.198000   238.532000   140.866\n",
+      "Equity              1100.0  796.53  496.32  896.74497  1097.777141  1145.123622  1737.409874  3147.205547  3266.267775  2259.993531  2351.086\n",
+      "Liability              0.0    0.00    0.00    0.00000     0.000000     0.000000     0.000000     0.000000     0.000000     0.000000     0.000\n",
       "\n",
       "Income Statement:\n",
-      "                              2023  2024   2025   2026   2027   2028  2029  2030  2031  2032  2033\n",
-      "Revenues                       0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
-      "Cost of Revenues               0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
-      "Operating Expenses             0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
-      "Depreciation & Amortizations   0.0  90.6  133.8  133.8  133.8  133.8  43.2   0.0   0.0   0.0   0.0\n",
-      "Interest Expenses              0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
-      "Tax Ratio                      0.0   0.0    0.0    0.0    0.0    0.0   0.0   0.0   0.0   0.0   0.0\n",
+      "                              2023    2024    2025       2026        2027        2028        2029        2030        2031        2032     2033\n",
+      "Revenues                       0.0    0.00    0.00  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.500\n",
+      "Cost of Revenues               0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
+      "Operating Expenses             0.0  212.87  379.28  160.15000  160.150000  160.150000  160.150000  373.020000  379.280000  160.150000  160.150\n",
+      "Depreciation & Amortizations   0.0   90.60  133.80  133.80000  133.800000  133.800000   43.200000   54.466000   97.666000   97.666000   97.666\n",
+      "Interest Expenses              0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
+      "Tax Ratio                      0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
       "\n",
       "Cash Flow Statement:\n",
-      "                2023  2024  2025  2026  2027  2028  2029  2030  2031  2032  2033\n",
-      "Operating CF     0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0\n",
-      "Investing CF     0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0\n",
-      "Financing CF  1100.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0\n"
+      "                2023    2024    2025     2026        2027        2028        2029       2030       2031        2032    2033\n",
+      "Operating CF     0.0 -212.87 -379.28 -5.20503  169.477141  190.473622  212.809874  23.701547  42.719775  288.741531  317.35\n",
+      "Investing CF     0.0    0.00    0.00  0.00000    0.000000    0.000000    0.000000   0.000000   0.000000    0.000000    0.00\n",
+      "Financing CF  1100.0    0.00    0.00  0.00000    0.000000    0.000000    0.000000   0.000000   0.000000    0.000000    0.00\n"
      ]
     }
    ],
@@ -255,10 +256,13 @@
     "        for ii in range(amortization_duration + 1):\n",
     "            if yy + ii >= self.first_year + self.duration:\n",
     "                break\n",
-    "            self.balance_sheet.at[yy + ii, 'Current Assets'] -= amount\n",
-    "            self.balance_sheet.at[yy + ii, 'Equity'] -= delta * ii\n",
-    "            self.balance_sheet.at[yy + ii, 'Non-current Assets'] += delta * (amortization_duration - ii)\n",
-    "            self.income_statement.at[yy + ii, 'Depreciation & Amortizations'] += delta * (ii != 0)\n",
+    "            jj = yy + ii\n",
+    "            while jj < self.first_year + self.duration:\n",
+    "                self.balance_sheet.at[jj, 'Current Assets'] -= amount\n",
+    "                self.balance_sheet.at[jj, 'Equity'] -= delta * ii\n",
+    "                self.balance_sheet.at[jj, 'Non-current Assets'] += delta * (amortization_duration - ii)\n",
+    "                self.income_statement.at[jj, 'Depreciation & Amortizations'] += delta * (ii != 0)\n",
+    "                jj += recurring_step if recurring_step > 0 else self.duration\n",
     "    \n",
     "    def pay_operating_expenses(self, year, amount, recurring_step):\n",
     "        yy = self._get_year_index(year)\n",
@@ -287,7 +291,7 @@
     "        print(self.cash_flow_statement.T)\n",
     "\n",
     "# Example usage:\n",
-    "fp = FinancialPeriod(first_year=2023, duration=11)\n",
+    "fp = FinancialPeriod(first_year=2023, duration=simulation_length)\n",
     "fp.finance(year=2023, amount=1100)\n",
     "fp.build_asset(year=2023, amount=53.67, amortization_duration=5, recurring_step=0)\n",
     "fp.build_asset(year=2023, amount=127, amortization_duration=5, recurring_step=0)\n",
@@ -295,10 +299,12 @@
     "fp.build_asset(year=2024, amount=216.00, amortization_duration=5, recurring_step=6)\n",
     "\n",
     "# Uncomment to simulate expenses and revenues\n",
-    "# fp.pay_operating_expenses(year=2024, amount=212.87, recurring_step=5)\n",
-    "# fp.pay_operating_expenses(year=2025, amount=219.13, recurring_step=5)\n",
-    "# fp.pay_operating_expenses(year=2025, amount=160.15, recurring_step=1)\n",
-    "# fp.get_revenues(year=2024, amount=500, recurring_step=1)\n",
+    "fp.pay_operating_expenses(year=2025, amount=160.15, recurring_step=1)\n",
+    "fp.pay_operating_expenses(year=2024, amount=212.87, recurring_step=6)\n",
+    "fp.pay_operating_expenses(year=2025, amount=219.13, recurring_step=6)\n",
+    "\n",
+    "for ii in range(0, simulation_length):\n",
+    "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0) # revenues\n",
     "\n",
     "fp.print_results()\n"
    ]
